Update GetTabForegroundColor to use theme color if it's defined by the provider.

Bug: 859055
Change-Id: I3a29d37292035ea9863210bf47e1a9ad3716d738
Reviewed-on: https://chromium-review.googlesource.com/1129854
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573755}
Former-commit-id: 767b6ae40b6c85897595dd2a579e0f4e400cc04a